# toto-interp

./: .gitignore  README.md  pr_final.md  pyproject.toml
docs/: codebase_report.md  lsf_setup.md  neurips_prelim_experiments.md
paper/neurips2026/: checklist.tex  neurips_2026.aux  neurips_2026.bbl  neurips_2026.blg  neurips_2026.out  neurips_2026.tex  references.bib
runs/pr2_operational_issue3/: operational_seed42_report.json  operational_seed42_report.md  operational_seed43_report.json  operational_seed43_report.md  operational_seed44_report.json  operational_seed44_report.md  operational_seed45_report.json  operational_seed45_report.md  operational_seed46_report.json  operational_seed46_report.md
scripts/: aggregate_pr2_operational.py  download_boom_dataset.py  download_lsf_datasets.py  dump_toto_activations.py  fit_toto_probes.py  render_toto_report.py  run_neurips_prelim_experiments.py  run_toto_interventions.py  run_toto_pipeline.py  run_toto_transfer.py
slurm/: refit_fno_issue3_curves.sh  run_issue3_random_fno_one.sh  run_pr2_operational_one.sh  run_pr2_operational_suite.sh  run_pr2_parallel_scavenger.sh  submit_pr2_individual_seeds.sh  submit_pr2_parallel_fleet.sh
tests/: fev_tasks_test.py  intervention_test.py  labels_test.py  loader_test.py  lsf_test.py  probe_test.py  report_test.py  test_helpers.py  trace_test.py  transfer_test.py
toto_interp/: __init__.py  boom.py  bootstrap.py  defaults.py  fev_tasks.py  fno.py  intervention.py  issue3_matching.py  labels.py  loader.py  lsf.py  metrics.py  probe.py  report.py  trace.py  transfer.py  types.py
(+6114 files in other folders)
